--- a/bc3-data/45966820.md
+++ b/bc3-data/45966820.md
@@ -4,10 +4,10 @@ Hyacinthe Lacenne posted this Jan 18, 2016 at 5:15 PM
 
 hello,  
   
-notre github mérite un coup de cleaning. J'ai supprimé le repo vide `soft`  
+notre github mérite un coup de cleaning. J'ai supprimé le repo vide soft  
   
-que fait-on du repo `hard` &amp; such  ? je vais demander à Yannick pour
-``image builder`  
+que fait-on du repo hard &amp; such  ? je vais demander à Yannick pour
+image builder  
   
 @++
 
