--- a/bc3-data/55426441.md
+++ b/bc3-data/55426441.md
@@ -89,7 +89,7 @@ If I understand well, you have some simulated data running on a local TCP
 server and you want to bring them in the app. If this is the case, you have
 indeed to follow the doc and then I think we'll have to interact together in
 order to fine tune the configuration settings that you'll find int the
-`Hyacinthes` class. Moreover our hyacinthes are set in 1 element probe context,
+Hyacinthes class. Moreover our hyacinthes are set in 1 element probe context,
 so we should adapt them. We are at disposal to work on that.  
   
 If you don't have any simulated data, we could work and ship to you a TCP
@@ -185,7 +185,7 @@ fake data of your TCP server and set correctly the hyacinthes.
 What I propose  you is to have some skype meeting in order for me to show you
 what are the main configuration setting that need to be set
 
-in the `Hyacinthes` class. It will be the opportunity to present you the state
+in the Hyacinthes class. It will be the opportunity to present you the state
 of the art of our work and we will measure the interactions we can have.
 
   
