--- a/bc3-data/88261948.md
+++ b/bc3-data/88261948.md
@@ -3,7 +3,7 @@
 Hyacinthe Lacenne posted this Mar 19, 2016 at 7:14 PM · 1 person applauded
 
 la team de Tedx est revenu vers nous pour nous faire intervenir à l'occas de
-leur deuxième gros event de l'année : `l'échappée`  
+leur deuxième gros event de l'année : l'échappée  
   
 au pgm 3 jours : conf + ateliers de sensibilisation/onboarding (RH +
 financeurs) + rencontre.  
