--- a/bc3-data/116455094.md
+++ b/bc3-data/116455094.md
@@ -176,7 +176,7 @@ une conséquence pratique sera de mener une refonte de l'orga des  repo.
 btw,  ![Hyacinthe Lacenne, echopen](./../../zz_assets/images/avatars/2157822.png)
 Hyacinthe  en collatéral de l'holacratie, ce serait pas mal d'adopter un  
 [Contributor Covenant](http://contributor-
-covenant.org/version/1/4/code_of_conduct.md), dont rails est adopteur
+covenant.org/version/1/4/code_of_conduct.md), dont `rails` est adopteur
 
 ### **Hyacinthe Lacenne** - Jul 17, 2016 at 10:06 AM
 
