--- a/bc3-data/128372427.md
+++ b/bc3-data/128372427.md
@@ -121,13 +121,13 @@ ah bah j'ai suivi ton lien ;)
 en effet, ce n'est pas une bonne pratique de mettre cela dans le head, et c ce
 que fait les instructions js du LocalSettings.  
   
-à la console, javais un message d'erreur ReferenceError: GoogleAnalytics is
-not defined et en effet j'en ai  trouvé la trace dans MediaWiki:Common.js,
-il y a avait une extension genre {{mediawiki:googleanalytics}}. c toi ? on
+à la console, javais un message d'erreur `ReferenceError: GoogleAnalytics is
+not defined` et en effet j'en ai  trouvé la trace dans `MediaWiki:Common.js`,
+il y a avait une extension genre 'mediawiki:googleanalytics'. c toi ? on
 doit toujours avoir 0 erreurs à la console ;). anyway me suis permis de le
 supprimer  
   
-j'ai mis le code dans MediaWiki:Common.js protégé par un async loader
+j'ai mis le code dans `MediaWiki:Common.js` protégé par un async loader
 
 ### **Hyacinthe Lacenne** - May 23, 2016 at 4:47 PM
 
