--- a/bc3-data/139765501.md
+++ b/bc3-data/139765501.md
@@ -382,7 +382,7 @@ la semaine qui vient
 
 \- les reverse engeneerer par réseaux de neurones. A ce titre, Djalel,
 animateur du groupe IA d'echOpen était présent, car important de maintenir une
-articulation entre le groupe Image processing et le groupe IA et a donné
+articulation entre le groupe `Image processing` et le groupe `IA` et a donné
 des pistes de travail : débruitage, compression du signal  
   
 au plan pratique, les membres du groupe choisissent de se retrouver tous les
