--- a/bc3-data/57197477.md
+++ b/bc3-data/57197477.md
@@ -21,7 +21,7 @@ _la page de FAQ_
 
   
 
-_le groupe de pages correspond à l'onglet Enjeux sur la home (avec trad des
+_le groupe de pages correspond à l'onglet `Enjeux` sur la home (avec trad des
 ongles)_
 
 <http://echopen.org/>  
