--- a/bc3-data/58798075.md
+++ b/bc3-data/58798075.md
@@ -32,7 +32,7 @@ _la page de FAQ_
 
   
 
-_le groupe de pages correspond à l'onglet Enjeux sur la home_
+_le groupe de pages correspond à l'onglet `Enjeux` sur la home_
 
 <http://echopen.org/>
 
