--- a/bc3-data/88260299.md
+++ b/bc3-data/88260299.md
@@ -123,7 +123,7 @@ La version anglaise de l'article : <http://www.makery.info/en/2016/03/29
 
 ### **Hyacinthe Lacenne** - Nov 01, 2016 at 10:53 AM
 
-une équipe de chercheurs de la Simon Bhyacinthear University nous a contacté ce
+une équipe de chercheurs de la `Simon Bhyacinthear University` nous a contacté ce
 matin car ils souhaitent concevoir un échographe frugal à usage pour les pays
 du Sud, et souhaitent faire cela avec nous ;)  
 après Bruxelles, notre 2ème entité d'internationalisation -&gt; à suivre, on
