--- a/bc3-data/277555444.md
+++ b/bc3-data/277555444.md
@@ -7,7 +7,7 @@ un thread dédié au design : indus/app
 ### **Hyacinthe Lacenne** - Nov 01, 2016 at 10:50 AM
 
 un [design camp](https://echopen.github.io/UXCamp20161025.html) était organisé
-le 25.10.11 à des fins d'UX. L'output est un templating psd prêt à être
+le 25.10.11 à des fins d'UX. L'output est un templating `psd` prêt à être
 intégré  
   
 gros sujet complexe car l'opérateur  
@@ -16,10 +16,10 @@ gros sujet complexe car l'opérateur
 intuitivement  
   
 \- doit utiliser le device d'une seule main, car l'autre tient la sonde et est
-souvent pleine de gel, ce qui prévient tout usage de type click  
+souvent pleine de gel, ce qui prévient tout usage de type `click`  
   
 On a eu des design high level, qui ont craqué le sujet. Thomas Robillard, web
-designer de l'epitech en stage chez echOpen a produit les psd. Ces derniers
+designer de l'epitech en stage chez echOpen a produit les `psd`. Ces derniers
 sont ouverts à la co-contribution sur InVision.  
   
 Les templates sont stabilisés pour jeudi, date du workshop d'intégration
